@@ -602,6 +602,11 @@ o mount -t <fstype> <block-device> <dir-path>
     This is a test
     nsh>
 
+o mv <old-path> <new-path>
+
+  Rename the file object at <old-path> to <new-path>.  Both paths must
+  reside in the same mounted filesystem.
+
 o ps
 
   Show the currently active threads and tasks.  For example,
@@ -802,6 +807,7 @@ Command Dependencies on Configuration Settings
   mkfifo     CONFIG_NFILE_DESCRIPTORS > 0
   mkrd       !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_FS_WRITABLE (see note 4)
   mount      !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_FS_READABLE (see note 3)
+  mv         !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_FS_WRITABLE (see note 4)
   ping       CONFIG_NET && CONFIG_NET_ICMP && CONFIG_NET_ICMP_PING  && !CONFIG_DISABLE_CLOCK && !CONFIG_DISABLE_SIGNALS
   ps         --
   put        CONFIG_NET && CONFIG_NET_UDP && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_NET_BUFSIZE >= 558 (see note 1,2)
@@ -840,12 +846,12 @@ also allow it to squeeze into very small memory footprints.
   CONFIG_NSH_DISABLE_LOSETUP,  CONFIG_NSH_DISABLE_LS,       CONFIG_NSH_DISABLE_MB,
   CONFIG_NSH_DISABLE_MKDIR,    CONFIG_NSH_DISABLE_MKFATFS,  CONFIG_NSH_DISABLE_MKFIFO,
   CONFIG_NSH_DISABLE_MKRD,     CONFIG_NSH_DISABLE_MH,       CONFIG_NSH_DISABLE_MOUNT,
-  CONFIG_NSH_DISABLE_MW,       CONFIG_NSH_DISABLE_PS,       CONFIG_NSH_DISABLE_PING,
-  CONFIG_NSH_DISABLE_PUT,      CONFIG_NSH_DISABLE_PWD,      CONFIG_NSH_DISABLE_RM,
-  CONFIG_NSH_DISABLE_RMDIR,    CONFIG_NSH_DISABLE_SET,      CONFIG_NSH_DISABLE_SH,
-  CONFIG_NSH_DISABLE_SLEEP,    CONFIG_NSH_DISABLE_TEST,     CONFIG_NSH_DISABLE_UMOUNT,
-  CONFIG_NSH_DISABLE_UNSET,    CONFIG_NSH_DISABLE_USLEEP,   CONFIG_NSH_DISABLE_WGET,
-  CONFIG_NSH_DISABLE_XD
+  CONFIG_NSH_DISABLE_MW,       CONFIG_NSH_DISABLE_MV,       CONFIG_NSH_DISABLE_PS,
+  CONFIG_NSH_DISABLE_PING,     CONFIG_NSH_DISABLE_PUT,      CONFIG_NSH_DISABLE_PWD,
+  CONFIG_NSH_DISABLE_RM,       CONFIG_NSH_DISABLE_RMDIR,    CONFIG_NSH_DISABLE_SET,
+  CONFIG_NSH_DISABLE_SH,       CONFIG_NSH_DISABLE_SLEEP,    CONFIG_NSH_DISABLE_TEST,
+  CONFIG_NSH_DISABLE_UMOUNT,   CONFIG_NSH_DISABLE_UNSET,    CONFIG_NSH_DISABLE_USLEEP,
+  CONFIG_NSH_DISABLE_WGET,     CONFIG_NSH_DISABLE_XD
 
 NSH-Specific Configuration Settings
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
